Remove ash dependency
The ash binary package was dropped in Debian unstable, see
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=920644

Signed-off-by: Dominik Viererbe <dominik.viererbe@canonical.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 language: c
 before_install:
   - sudo apt-get update -q
-  - sudo apt install dash bash ash ksh zsh tcsh csh rc
+  - sudo apt install dash bash ksh zsh tcsh csh rc
 script: 
   - ./autogen.sh
   - ./configure
