--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 ---
 exclude:
   (?x)^(
+  configure|
   configure\..*|
   .cache/.*
   )$
@@ -47,7 +48,7 @@ repos:
     rev: v6.2.1
     hooks:
       - id: beautysh
-        exclude: ^(test/.*)$
+        exclude: (?x)^(test/.*)$
         additional_dependencies:
           - setuptools
   - repo: https://github.com/codespell-project/codespell
@@ -74,6 +75,7 @@ repos:
           - --language=c
           #- -IInc
           - '--template={file}({line}): {severity} ({id}): {message}'
+          - --inline-suppr
       - id: cpplint
         args: ["--filter=-build/header_guard,-build/include,-build/include_subdir,-legal/copyright,-readbility/casting,-readability/fn_size,-whitespace/blank_line,-whitespace/braces,-whitespace/comma,-whitespace/comments,-whitespace/line_length,-whitespace/newline,-whitespace/operators,-whitespace/parens,-whitespace/semicolon,-whitespace/tab,-whitespace/todo"]
         additional_dependencies:
@@ -82,6 +84,7 @@ repos:
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
+        exclude: (?x)^(test/.*)$
         # args: [-x,-e1007,-e1009,-e1072,-e1073]
   - repo: https://github.com/pocc/pre-commit-hooks
     rev: v1.3.5
