Add uncrustify configuration, apply it
The uncrustify configuration was set up to match the existing
layout quite closely while adding braces and indenting where
missing

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -23,6 +23,8 @@ jobs:
           key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml')
             }}
       - name: Run pre-commit hooks
+        env:
+          SKIP: uncrustify
         run: |
           set -o pipefail
           pre-commit gc
