Remove space after sizeof

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -446,7 +446,7 @@ sp_inside_paren_cast                     = remove   # ignore/add/remove/force
 sp_cpp_cast_paren                        = force   # ignore/add/remove/force
 
 # force or remove space between 'sizeof' and '('
-sp_sizeof_paren                          = force   # ignore/add/remove/force
+sp_sizeof_paren                          = remove   # ignore/add/remove/force
 
 # force or remove space after the tag keyword (Pawn)
 sp_after_tag                             = ignore   # ignore/add/remove/force
