Add timeout value to ci run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  # Normally runs in less than 50 seconds, but could stall because of test
+  timeout-minutes: 3
   build:
     runs-on: ubuntu-24.04
 
